# production-rag-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/corpus/: README.md
eval/: golden.jsonl  metrics.py  run_golden.py
src/: api.py  config.py  indexing.py  llm.py
src/generation/: pipeline.py  prompts.py  verifier.py
src/retrieval/: bm25.py  chunker.py  embedder.py  hybrid.py  vector_store.py
src/security/: injection.py
tests/: test_smoke.py
