[project]
name = "production-rag-service"
version = "0.1.0"
description = "Production-grade Retrieval-Augmented Generation service with hybrid retrieval, citation verification, and prompt-injection defenses"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "openai>=1.40",
    "sentence-transformers>=2.7",
    "rank-bm25>=0.2.2",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "loguru>=0.7",
    "tenacity>=8.2",
    "numpy>=1.26",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "httpx>=0.27",      # for async calls in tests
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
